<resources>

    <string name="app_name">Ouday Test</string>
    <string name="profile.label.login">Login</string>
    <string name="profile.button.login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="splash">Welcome to MMVMI sample App \n by Ouday Khaled</string>

</resources>
