<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".customer.presentation.ui.fragment.CustomerDetailFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textSize="@dimen/sp_32"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_64"
        android:textColor="@color/grey"/>
    
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textSize="@dimen/sp_32"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobileNumber"
        android:textSize="@dimen/sp_32"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="@dimen/sp_32"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:textSize="@dimen/sp_32"
        android:text="@string/save"/>


</LinearLayout>
